clusters/homelab/media/jellyfin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  labels:
    app: jellyfin
  namespace: media
spec:
  selector:
    matchLabels:
      app: jellyfin
      tier: media
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyfin
        tier: media
    spec:
      containers:
      - image: lscr.io/linuxserver/jellyfin:latest
        name: jellyfin
        ports:
        - containerPort: 8096
          name: jellyfin
        volumeMounts:
        - name: jellyfin-persistent-storage
          mountPath: /config
        - name: jellyfin-tv-storage
          mountPath: /tv
        - name: jellyfin-movies-storage
          mountPath: /movies
        imagePullPolicy: Always
      volumes:
      - name: jellyfin-persistent-storage
        persistentVolumeClaim:
          claimName: jellyfin-pv-claim
      - name: jellyfin-tv-storage
        persistentVolumeClaim:
          claimName: jellyfin-tv-pvc
      - name: jellyfin-movies-storage
        persistentVolumeClaim:
          claimName: jellyfin-movies-pvc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: media
spec:
  ingressClassName: nginx
  rules:
  - host: jellyfin.dyslexicjedi.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin
            port: 
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  labels:
    app: jellyfin
    kubernetes.io/name: "jellyfin"
  namespace: media
spec:
  selector:
    app: jellyfin
  ports:
  - name: jellyfin
    port: 80
    targetPort: 8096
