clusters/homelab/media/prowlarr.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  labels:
    app: prowlarr
  namespace: media
spec:
  selector:
    matchLabels:
      app: prowlarr
      tier: media
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: prowlarr
        tier: media
    spec:
      containers:
      - image: lscr.io/linuxserver/prowlarr:latest
        name: prowlarr
        ports:
        - containerPort: 9696
          name: prowlarr
        volumeMounts:
        - name: prowlarr-persistent-storage
          mountPath: /config
        imagePullPolicy: Always
      volumes:
      - name: prowlarr-persistent-storage
        persistentVolumeClaim:
          claimName: prowlarr-pv-claim
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: media
spec:
  ingressClassName: nginx
  rules:
  - host: prowlarr.dyslexicjedi.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prowlarr
            port: 
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  labels:
    app: prowlarr
    kubernetes.io/name: "prowlarr"
  namespace: media
spec:
  selector:
    app: prowlarr
  ports:
  - name: prowlarr
    port: 80
    targetPort: 9696
