clusters/homelab/media/sonarr.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
  namespace: media
spec:
  selector:
    matchLabels:
      app: sonarr
      tier: media
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr
        tier: media
    spec:
      containers:
      - image: lscr.io/linuxserver/sonarr:latest
        name: sonarr
        ports:
        - containerPort: 8989
          name: sonarr
        volumeMounts:
        - name: sonarr-persistent-storage
          mountPath: /config
        - name: sonarr-tv-storage
          mountPath: /tv
        - name: sonarr-download-storage
          mountPath: /data
        imagePullPolicy: Always
      volumes:
      - name: sonarr-persistent-storage
        persistentVolumeClaim:
          claimName: sonarr-pv-claim
      - name: sonarr-tv-storage
        persistentVolumeClaim:
          claimName: sonarr-tv-pvc
      - name: sonarr-download-storage
        persistentVolumeClaim:
          claimName: sonarr-download-pvc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: media
spec:
  ingressClassName: nginx
  rules:
  - host: sonarr.dyslexicjedi.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port: 
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    app: sonarr
    kubernetes.io/name: "sonarr"
  namespace: media
spec:
  selector:
    app: sonarr
  ports:
  - name: sonarr
    port: 80
    targetPort: 8989
